# dev-config

./: README.md  pyproject.toml
.config/: starship.toml
.config/fish/: config.fish
